<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Modbus_ReadRequest" Id="{03dc48c8-ddc2-4989-a025-a345a57f808d}">
    <Declaration><![CDATA[TYPE ST_Modbus_ReadRequest :
STRUCT
	
	ReadRegsVals: 				ARRAY[1..10] OF WORD;
	SlaveAddress : 				UINT;
	QtyWordsToRead : 			UINT;
	AdrFirstSlaveRegisterRead: 	UINT;
	bRequestCompleted : 		BOOL;
	bRequestAccepted: 			BOOL;
	bError:						BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>